      tracebacks in error_log when a client disconnects before all
      data is sent.
    * A bug that caused cross repository commits of changesets that involved
      a branched trove to fail in some cases has been fixed.
    * If an entitlement is used for repository access, it is now sent
      over HTTPS instead of HTTP by default.
    * conary showcs --all now shows not by default troves

 o Performance improvements:
    * Significantly improved the speed of erasing troves with many dependencies

Changes in 1.0.3
  o Client changes:
    * Conary displays full paths when in the error message generated
      when it can't open a log file rather than leaving out the root 
      directory.

  o Performance improvements:
    * A find() class method has been added to StreamSet which enables
      member lookups without complete thawing.
    * The code path for committing filestreams to repositories now
      uses find() to minimize file stream thaws.
    * DBstore now supports precompiled SQL statements for SQLite.
    * Retrieving troves from the local system database no longer
      returns file information when file information is not requested.
    * Dependencies, dependency sets, StreamCollections, file
      dictionaries, and referenced file lists now use C parsing code
      for stream thawing.
    * Extraneous trove instantiations on the system update path have
      been eliminated.
    * Adding troves to the local database now uses temporary tables to
      batch the insertions.

  o Bugfixes:
    * A bug that caused a mismatch between file objects and fileIds
      when cloning a trove has been fixed.

Changes in 1.0.2:
  o Bugfixes:
    * A bug that caused redirects to fail to build when multiple
      flavors of a trove exist has been fixed.
    * A bug with cooking flavored redirects has been fixed.
    * The cvc command no longer enforces managed policy with --prep.
    * A bug that caused disttools based python packages to be built as