@@ -8,6 +8,14 @@ Changes in @NEW@:
     * If an entitlement is used for repository access, it is now sent
       over HTTPS instead of HTTP by default.
     * conary showcs --all now shows not by default troves
+    * Previously, there was no way using showcs to display only the troves 
+      actually in a changeset - conary would by default access the repository 
+      to fill in and missing troves.  Now you must specify --recurse-repos 
+      to cause conary to search the repository for missing troves.
+      The --trove-flags option will display when a trove is missing in a
+      changeset.
+    * A bug that caused showcs --all to display file lists even when --ls 
+      was not specified has been fixed.
 
  o Performance improvements:
     * Significantly improved the speed of erasing troves with many dependencies
